third_party/move/tools/move-asm/tests/assembler/native_fun_with_body.masm
//# publish
module 0x66::test

native fun f(l0: u64): u64
    move_loc l0
    ret
